# forgerace

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  TASKS.md  forgerace.py  forgerace.toml  pyproject.toml  universal_optimizer_ru.md
examples/: TASKS.md  ethos.toml  example.toml
forgerace/: __init__.py  __main__.py  agents.py  cli.py  config.py  cost.py  decompose.py  discuss.py  merge.py  orchestrator_monolith.py  pipeline.py  review.py  task_queue.py  tasks.py  utils.py  worktree.py
